Fixed overflowing charts

--- a/src/pages/Home/ChartPrice/styles.module.scss
+++ b/src/pages/Home/ChartPrice/styles.module.scss
@@ -26,6 +26,8 @@
     bottom: 0;
     width: 100%;
     height: 100%;
+    align-items: center;
+    display: flex;
   }
 
   .wrapper {
@@ -36,13 +38,14 @@
     padding: 0 1rem 1rem;
     position: relative;
     z-index: 2;
+    pointer-events: none;
 
     @media (min-width: 768px) {
       padding: 0 2rem 2rem;
     }
 
-    .left {
-      pointer-events: none;
+    .right {
+      pointer-events: all;
     }
   }
 
